--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
             referrerpolicy="no-referrer" />
         <link
             rel="stylesheet"
-            href="./node_modules/basiclightbox/dist/basicLightbox.min.css" />
+            href="https://cdn.jsdelivr.net/npm/basiclightbox@5.0.4/dist/basicLightbox.min.css" />
         <link
             rel="stylesheet"
             href="./css/styles.css" />
@@ -23,7 +23,7 @@
         <ul class="gallery"></ul>
 
         <script
-            src="./node_modules/basiclightbox/dist/basicLightbox.min.js"
+            src="https://cdn.jsdelivr.net/npm/basiclightbox@5.0.4/dist/basicLightbox.min.js"
             async></script>
         <script
             src="./js/gallery.js"
